--- a/src/index.css
+++ b/src/index.css
@@ -1,97 +1,145 @@
+* {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #282D35;
-  color: white;
-
 }
 
-/* main */
 .container {
-  max-width: 87.5rem;
-  width: 80%;
-  margin: 0 auto;
-  padding-right: 0.9375rem;
-  padding-left: 0.9375rem;
-
-}
-.container-fluid {
-  width: 100%;
-  padding-right: 0.9375rem;
-  padding-left: 0.9375rem;
-  margin: 0 auto;
-}
-
-.d-flex {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
-::marker {
-  color: #61DAFB;
-  font-size: 2rem;
-}
-/* header */
 
-header {
+/* NAV styles */
+
+nav {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 30px 25px;
+  height: 60px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+nav.dark {
   background-color: #21222A;
 }
-.header-wrap {
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  flex-wrap: wrap;
+
+.nav--logo_icon {
+  width: 30px;
+  margin-right: 10px;
 }
-.logo {
+
+.nav--logo_text {
+  color: #61DAFB;
+  margin-right: auto;
+}
+
+.nav--title {
+  color: #DEEBF8;
+}
+
+.toggler {
   display: flex;
   align-items: center;
-  text-decoration: none;
-  gap: 0.5rem;
-}
-.logo-img {
-  width: 3.125rem;
-}
-.logo-text {
-  color: #61DAFB;
-  font-size: 1.375rem;
-}
-.nav-items {
-  list-style: none;
-  margin-left: auto;
-  justify-content: space-evenly;
-  width: 50%;
 }
 
-.header-title {
-  font-size: 1rem;
+.toggler p {
+  font-size: 0.625rem;
+  font-weight: 600;
 }
 
-
-/* main-content */
-.main-content {
-  position: relative;
+.toggler--slider {
+  width: 25px;
+  height: 13px;
+  background-color: #2B283A;
+  border-radius: 2rem;
+  margin-inline: 7px;
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: 1px solid black;
+  box-sizing: content-box;
 }
-.main-content::after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-20%, -50%);
-  content: '';
-  width: 50vh;
-  height: 50vh;
-  background-image: url(./images/logo512.png);
+
+nav.dark .toggler--slider {
+  border-color: white;
+  background-color: #F5F5F5;
+}
+
+.toggler--slider--circle {
+  height: 13px;
+  width: 13px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+nav.dark .toggler--slider--circle {
+  background-color: black;
+}
+
+.toggler--light {
+  color: #2B283A;
+}
+
+nav.dark .toggler--light {
+  color: #918E9B;
+}
+
+.toggler--dark {
+  color: #D5D4D8;
+}
+
+nav.dark .toggler-dark {
+  color: #FFFFFF;
+}
+
+nav.dark .toggler--slider {
+  justify-content: flex-end;
+}
+
+/* MAIN styles */
+main {
+  padding: 57px 27px;
+  background-image: url("./images/react-icon-light.png"); 
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: -1;
-  filter: invert(3%) sepia(1%) saturate(1%) hue-rotate(5deg) brightness(1%) contrast(1%);
-  opacity: 0.3;
+  background-position: right center;
+  flex: 1 1 auto;
+  background-color: white;
+  color: #2B283A;
 }
 
-h1 {
-  font-size: 2.4375rem;
+main.dark {
+  background-image: url("./images/react-icon-dark.png"); 
+  background-color: #282D35;
+  color: white;    
 }
 
-li {
-  font-size: 16px;
+.main--title {
+  margin: 0;
+  font-size: 39px;
+  letter-spacing: -0.05em;
+}
+
+.main--facts {
+  margin-top: 46px;
+  max-width: 400px;
+}
+
+.main--facts > li {
+  line-height: 19px;
+  padding-block: 10px;
+}
+
+.main--facts > li::marker {
+  font-size: 1.4rem;
+  color: #61DAFB;
 }
