--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 .container {
@@ -33,13 +34,17 @@ nav.dark {
 }
 
 .nav--logo_icon {
-  width: 30px;
-  margin-right: 10px;
+  margin-right: auto;
+  background-image: url("./images/react-icon-small.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  text-decoration: none;
 }
 
 .nav--logo_text {
   color: #61DAFB;
   margin-right: auto;
+  padding-left: 30px;
 }
 
 .nav--title {
